--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "html-webpack-plugin": "^3.2.0",
     "ol": "^6.1.1",
     "openlayers": "^4.6.5",
-    "style-loader": "^1.1.3"
+    "style-loader": "^1.1.3",
+    "use-position": "^0.0.6"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
