--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "html-webpack-plugin": "^3.2.0",
     "ol": "^6.1.1",
     "openlayers": "^4.6.5",
+    "radium": "^0.26.0",
+    "react-animations": "^1.0.0",
     "style-loader": "^1.1.3",
     "use-position": "^0.0.6"
   },
