--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^3.4.2",
     "global": "^4.4.0",
     "html-webpack-plugin": "^3.2.0",
+    "location-api": "^1.0.1",
     "ol": "^6.1.1",
     "openlayers": "^4.6.5",
     "radium": "^0.26.0",
