--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "location-api": "^1.0.1",
     "ol": "^6.1.1",
     "openlayers": "^4.6.5",
+    "pluralize": "^8.0.0",
     "radium": "^0.26.0",
     "react-animations": "^1.0.0",
     "source-map-loader": "^0.2.4",
