--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "location-api",
-  "version": "1.0.1",
-  "main": "index.js",
+  "version": "1.0.2",
+  "module": "dist/index.js",
   "license": "MIT",
   "dependencies": {
     "@types/react": "^16.9.19",
@@ -17,7 +17,7 @@
     "css-loader": "^3.4.2",
     "global": "^4.4.0",
     "html-webpack-plugin": "^3.2.0",
-    "location-api": "^1.0.1",
+    "location-api": "^1.0.2",
     "ol": "^6.1.1",
     "openlayers": "^4.6.5",
     "pluralize": "^8.0.0",
