--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "location-api",
-  "version": "1.0.2",
+  "version": "1.0.3-rc",
+  "main": "dist/app.umd.js",
   "module": "dist/index.js",
   "license": "MIT",
   "dependencies": {
@@ -17,7 +18,7 @@
     "css-loader": "^3.4.2",
     "global": "^4.4.0",
     "html-webpack-plugin": "^3.2.0",
-    "location-api": "^1.0.2",
+    "location-api": "^1.0.2-rc",
     "ol": "^6.1.1",
     "openlayers": "^4.6.5",
     "pluralize": "^8.0.0",
