--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "css-loader": "^3.4.2",
     "global": "^4.4.0",
     "html-webpack-plugin": "^3.2.0",
-    "location-api": "^1.0.2-rc",
     "ol": "^6.1.1",
     "openlayers": "^4.6.5",
     "pluralize": "^8.0.0",
@@ -32,7 +31,8 @@
     "webpack-dev-server": "^3.10.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production"
+    "start": "webpack-dev-server --mode development --content-base example --config example/webpack.config --open --hot",
+    "build": "webpack --mode production",
+    "build:dev": "webpack --config example/webpack.config"
   }
 }
