--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "location-api",
   "version": "1.0.3",
-  "main": "dist/app.umd.js",
+  "main": "dist/app.min.js",
   "module": "dist/index.js",
   "license": "MIT",
   "dependencies": {
@@ -18,6 +18,7 @@
     "css-loader": "^3.4.2",
     "global": "^4.4.0",
     "html-webpack-plugin": "^3.2.0",
+    "location-api": "^1.0.3",
     "ol": "^6.1.1",
     "openlayers": "^4.6.5",
     "pluralize": "^8.0.0",
