--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "css-loader": "^3.4.2",
     "global": "^4.4.0",
     "html-webpack-plugin": "^3.2.0",
-    "location-api": "^1.0.5-rd",
+    "location-api": "^1.0.5-re",
     "ol": "^6.1.1",
     "openlayers": "^4.6.5",
     "pluralize": "^8.0.0",
