added assets exporters and loders

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,9 @@
       "components/*": [
         "src/components/*"
       ],
-    }
+    },
   },
+  "include": ["./src/types/index.d.ts"],
   "files": [
     "src/index.tsx",
   ],
