--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/openlayers": "^4.6.17",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^3.4.2",
+    "file-loader": "^6.0.0",
     "global": "^4.4.0",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^6.0.0",
     "ol": "^6.1.1",
     "openlayers": "^4.6.5",
     "pluralize": "^8.0.0",
