--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "i18next": "^19.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "typescript": "^3.7.5",
@@ -20,6 +21,7 @@
     "global": "^4.4.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
+    "json-loader": "^0.5.7",
     "ol": "^6.1.1",
     "openlayers": "^4.6.5",
     "pluralize": "^8.0.0",
